--- a/package.json
+++ b/package.json
@@ -53,5 +53,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://shinnosuke-takahashi.github.io/public/index.html"
+  "homepage": "https://shinnosuke-takahashi.github.io"
 }
